<resources>
    <string name="app_name">Calculator</string>
    <string name="counter">counter</string>
    <string name="result">result</string>
    <string name="clear">clear</string>
    <string name="divide">divide</string>
    <string name="multiply">multiply</string>
    <string name="backspace">backspace</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="minus">minus</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="plus">plus</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="percent">percent</string>
    <string name="_0">0</string>
    <string name="dot">dot</string>
    <string name="equals">equals</string>
    <string name="count">count</string>
</resources>