<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    android:orientation="vertical"
    android:weightSum="60">

    <TextView
        android:id="@+id/textCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="30"
        android:text="@string/count"
        android:textColor="@color/yellow" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="30"
        android:text="@string/result"
        android:textColor="@color/yellow" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonClear"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/clear"
            android:textColor="@color/yellow" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDivide"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/divide"
            android:textColor="@color/yellow" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMultiply"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/multiply"
            android:textColor="@color/yellow" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonBackspace"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/backspace"
            android:textColor="@color/yellow" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button1"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/_1"
            android:textColor="@color/yellow" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button2"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/_2"
            android:textColor="@color/yellow" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button3"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/_3"
            android:textColor="@color/yellow" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMinus"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/minus"
            android:textColor="@color/yellow" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button4"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/_4"
            android:textColor="@color/yellow" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button5"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/_5"
            android:textColor="@color/yellow" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button6"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/_6"
            android:textColor="@color/yellow" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonPlus"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/plus"
            android:textColor="@color/yellow" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button7"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/_7"
            android:textColor="@color/yellow" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button8"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/_8"
            android:textColor="@color/yellow" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button9"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/_9"
            android:textColor="@color/yellow" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonPercent"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/percent"
            android:textColor="@color/yellow" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button0"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/_0"
            android:textColor="@color/yellow" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDot"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/dot"
            android:textColor="@color/yellow" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonEquals"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_gravity="fill"
            android:text="@string/equals"
            android:textColor="@color/yellow" />
    </GridLayout>

</LinearLayout>